// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<div
  className="tc-view__TcView-sc-nuazoi-0 gzApqG"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-sc-ynke2n-0 iZWEop"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`2. with a very long byline 1`] = `
<div
  className="tc-view__TcView-sc-nuazoi-0 gzApqG"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-sc-ynke2n-0 iZWEop"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 dBuniw"
  >
    , Environment Editor | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-sc-ynke2n-0 iZWEop"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 dBuniw"
  >
    , Environment Editor | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-sc-ynke2n-0 iZWEop"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 dBuniw"
  >
    , Environment Editor
  </div>
</div>
`;
